--- a/Dandy/.settings/org.eclipse.wst.common.component
+++ b/Dandy/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="Dandy">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/com"/>
         <property name="context-root" value="Dandy"/>
         <property name="java-output-path" value="/Dandy/build/classes"/>
     </wb-module>
