--- a/Dandy/.settings/org.eclipse.wst.common.component
+++ b/Dandy/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Dandy">
+    <wb-module deploy-name="Dandy12">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="java-output-path" value="/Dandy/build/classes"/>
-        <property name="context-root" value="Dandy"/>
+        <property name="java-output-path" value="/Dandy12/build/classes"/>
+        <property name="context-root" value="Dandy12"/>
     </wb-module>
 </project-modules>
